<resources>
    <string name="app_name">Scalpsense</string>

    <string name="greeting">Selamat datang</string>
    <string name="greeting_msg">Senang melihatmu, mari berkenalan</string>
    <string name="title_input_name">Siapa namamu?</string>
    <string name="input_name_fullname">masukkan nama lengkap</string>
    <string name="input_name_nickname">masukkan nama panggilan</string>
    <string name="button_next">Simpan</string>

    <string name="card_title1">Pemeriksaan terakhir</string>
    <string name="card_title2">Kesehatanmu</string>
    <string name="title_activity_history">Riwayat pemeriksaan</string>
    <string name="title_empty_activity_history">Belum ada riwayat pemeriksaan</string>
    <string name="title_empty_article">Tidak ada artikel</string>

    <string name="title_add_new">Tambahkan data baru</string>
    <string name="title_staying_up_late">Begadang</string>
    <string name="desc_staying_up_late">Berapa jam kamu begadang</string>
    <string name="title_coffee_consumption">Minum kopi</string>
    <string name="desc_coffee_consumption">Berapa gelas kopi yang kamu konsumsi kemarin?</string>
    <string name="title_brain_working">Waktu kerja</string>
    <string name="desc_brain_working">Berapa jam kamu telah bekerja dihitung dari hari kemarin?</string>
    <string name="title_pressure_level">Tingkat tekanan</string>
    <string name="desc_pressure_level">Tingkat tekanan yang kamu rasakan</string>
    <string name="title_stress_level">Tingkat stress</string>
    <string name="desc_stress_level">Tingkat stress yang kamu rasakan</string>
    <string name="title_swimming">Berenang</string>
    <string name="desc_swimming">Sudahkah kamu berenang hari ini?</string>
    <string name="title_hair_washing">Keramas</string>
    <string name="desc_hair_washing">Sudahkah kamu keramas hari ini?</string>
    <string name="title_dandruff">Ketombe</string>
    <string name="desc_dandruff">Adakah ketombe di rambutmu?</string>
    <string name="title_image_data">Data gambar</string>
    <string name="desc_image_data">Kami butuh gambar foto kulit kepalamu</string>
    <string name="button_done">Selesai</string>
    <string name="button_go_detail">Lihat detail</string>

    <string-array name="sense_level">
        <item>Rendah</item>
        <item>Sedang</item>
        <item>Tinggi</item>
        <item>Sangat Tinggi</item>
    </string-array>
    <string-array name="bool_val">
        <item>Tidak</item>
        <item>Ya</item>
    </string-array>
    <string-array name="condition_level">
        <item>Tidak ada</item>
        <item>Sedikit</item>
        <item>Banyak</item>
    </string-array>
    <string-array name="disease_name">
        <item>Tinea capitis</item>
        <item>Seborrhoeic dermatitis</item>
        <item>Scalp psoriasis</item>
        <item>Alopecia areata</item>
    </string-array>
    <string-array name="disease_desc">
        <item>Tinea capitis atau yang dikenal juga dengan infeksi kurap atau herpes tonsil adalah penyakit yang disebabkan oleh infeksi jamur pada kulit kepala. Penyakit ini lebih sering dialami oleh anak-anak, mulai dari balita sampai usia sekolah, dan sangat menular.</item>
        <item>Dermatitis seboroik adalah penyakit kulit yang umumnya mengenai kulit kepala dan area tubuh yang berminyak, seperti punggung, wajah, dahi, ketiak, pangkal paha, serta dada bagian atas. Pada kulit kepala, penyakit ini menyebabkan kulit berwarna merah, berketombe, dan bersisik.</item>
        <item>Sama seperti psoriasis pada umumnya yang sering diartikan sebagai kudis, penyakit ini sering dianggap sebagai ketombe biasa bagi sebagian besar orang. Psoriasis pada kulit kepala ini ditandai dengan munculnya warna kemerahan pada beberapa bagian kulit kepala yang disertai dengan sisik berwarna putih. Penyakit ini dapat menyebar hingga ke wajah, telinga atau leher.</item>
        <item>Alopecia areata adalah penyakit auto-imun, yaitu kondisi di mana sistem kekebalan tubuh menyerang sel-sel sehat pada tubuh sendiri. Penyakit ini menyebabkan folikel rambut yang ada di kepala, wajah, atau tubuh menjadi semakin kecil dan berhenti memproduksi rambut, awalnya menimbulkan rambut rontok hingga mengakibatkan kebotakan jika dibiarkan.</item>
    </string-array>
    <string-array name="disease_article">
        <item>https://www.halodoc.com/kesehatan/tinea-capitis</item>
        <item>https://www.halodoc.com/kesehatan/dermatitis-seboroik</item>
        <item>https://www.halodoc.com/artikel/8-jenis-psoriasis-yang-perlu-diketahui</item>
        <item>https://www.halodoc.com/kesehatan/alopecia-areata</item>
    </string-array>

    <string name="really_dummy_text_article">Penelitian terbaru menunjukkan bahwa konsumsi tinggi vitamin Z dapat meningkatkan kesehatan tubuh secara signifikan. Vitamin Z, yang ditemukan dalam makanan eksotis seperti air mawar dan cokelat anggur, telah ditemukan memiliki efek luar biasa pada fungsi seluler dan anti-penuaan. Selain itu, terapi meditasi matahari selama 5 menit setiap hari telah terbukti secara klinis meningkatkan energi dan kebahagiaan, serta mengurangi risiko penyakit yang disebabkan oleh kurang tidur.</string>
    <string-array name="article_title">
        <item>Dummy Title</item>
    </string-array>
    <string-array name="article_story">
        <item>Dummy Story</item>
    </string-array>
    <integer-array name="article_image">
        <item>@drawable/img_story_0</item>
        <item>@drawable/img_story_1</item>
        <item>@drawable/img_story_2</item>
        <item>@drawable/img_story_3</item>
    </integer-array>

</resources>