<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AddFragmentTwo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_activity_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_inria_sans"
            android:text="@string/title_add_new"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:textColor="@color/black" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_activity_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:background="@drawable/rounded_frame_bkg"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_activity_list"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_inria_sans"
                    android:text="@string/title_pressure_level"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_inria_sans"
                    android:text="@string/desc_pressure_level"
                    android:textSize="16sp" />
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_level_of_pressure"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rounded_frame_input_bkg"
                    android:padding="16dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_inria_sans"
                    android:text="@string/title_stress_level"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_inria_sans"
                    android:text="@string/desc_stress_level"
                    android:textSize="16sp" />
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_level_of_stress"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rounded_frame_input_bkg"
                    android:padding="16dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_inria_sans"
                    android:text="@string/title_swimming"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_inria_sans"
                    android:text="@string/desc_swimming"
                    android:textSize="16sp" />
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_have_swimmed_bool"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rounded_frame_input_bkg"
                    android:padding="16dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_inria_sans"
                    android:text="@string/title_hair_washing"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_inria_sans"
                    android:text="@string/desc_hair_washing"
                    android:textSize="16sp" />
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_hair_washed_bool"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rounded_frame_input_bkg"
                    android:padding="16dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_inria_sans"
                    android:text="@string/title_dandruff"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_inria_sans"
                    android:text="@string/desc_dandruff"
                    android:textSize="16sp" />
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_dandruff_condition_lvl"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rounded_frame_input_bkg"
                    android:padding="16dp"/>
                <androidx.constraintlayout.utils.widget.ImageFilterButton
                    android:id="@+id/btn_next_two"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/circle_frame_button_bkg"
                    android:backgroundTint="@color/blue_200"
                    android:src="@drawable/ic_arrow_next"
                    app:tint="@color/white" />
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:id="@+id/page_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/circle_dot_indicator"
                        android:tint="@color/grey_200" />

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:id="@+id/page_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/circle_dot_indicator"
                        android:tint="@color/yellow_200" />

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:id="@+id/page_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/circle_dot_indicator"
                        android:tint="@color/grey_200" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_activity_list"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>