<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AddFragmentThree">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_activity_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_inria_sans"
        android:text="@string/title_add_new"
        tools:textColor="@color/black"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_activity_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_frame_bkg"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="multiply"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_activity_list">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_inria_sans"
                android:text="@string/title_image_data"
                android:textSize="16sp"
                android:textStyle="bold" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_inria_sans"
                android:text="@string/desc_image_data"
                android:textSize="16sp" />
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ifb_add_images"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounded_frame_input_bkg"
                android:padding="16dp"
                android:src="@drawable/ic_add" />
            <Button
                android:id="@+id/btn_submit_all"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/yellow_200"
                android:text="@string/button_done" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circle_dot_indicator"
                    android:tint="@color/grey_200" />

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/circle_dot_indicator"
                    android:tint="@color/grey_200" />

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circle_dot_indicator"
                    android:tint="@color/yellow_200" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>